# storm-framework

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_ID.md  compiler  heedlicense.py  install  install.sh  main.py  pass.txt  pentest  pyproject.toml  pytest.ini  requirements.txt  rootmap.py  setup  storm  versi.py
.github/: README.md
.github/workflows/: python-app.yml  review-app.yml  review-pr.yml  style-black.yml
app/: banner.py  update.py  utils.py
app/banners/: banner.py
app/base/: Cargo.toml  check  check.rs  config_ui.py  config_update.py
app/lib/ui/: README.md
app/modules/: attc_net.py  dns.py  firebase_db.py  firebase_fs.py  md5_crypt.py  osint.py  scanner.py  subdomain.py  web_head.py  whois.py
app/modules/brute/: md5_crypt.py  network.py
app/modules/cracker/: osint.py
app/modules/scanner/: dns.py  scanner.py  subdomain.py  web_head.py  whois.py
app/utility/: colors.py  config_path.py  down_ghosint.py  down_ghunt.py  down_osint.py  load_var.py  restart.py  search.py  update.py  utils.py  verify.py
app/utility/module/: down_osint.py
assets/wordlist/: password.txt  userpass.py
example/: exmod.py
lib/: README.md
lib/core/: handler.py
lib/core/commands/: about.py  back.py  clear.py  down.py  exit.py  exploit.py  help.py  info.py  run.py  search.py  set.py  show.py  storm.py  update.py  use.py
lib/core/database/: signed_manifest.json
lib/smf/: ldch.py  svch.py
lib/smf/core/db/: Cargo.toml
lib/sqlite/: helper_db.py
lib/sqlite/storage/: storm.db
lib/ui/: README.md
lib/ui/banners/: data1.py
lib/ui/core/: __init__.py
modules/: README.md  example_mod.py  template_mod.pyt
modules/auxiliary/: example_mod.py
modules/auxiliary/brute/: md5_crypt.py  network.py
modules/auxiliary/crawler/: cve_load.py
modules/auxiliary/scanner/: dns.py  scan_net.py  web_head.py  whois.py
modules/auxiliary/sniffer/: dpispy.py
modules/auxiliary/voip/: rtp_load.py  rtp_sniff.py  sip_dos.py  sip_scan.py
modules/exploit/: example_mod.py
modules/security/integrity/: integrity_check.py
modules/vulnerability/: README.md  example_cve.py  template_cve.py
script/: credential_checker.py  dns.py  firebase_db.py  firebase_fs.py  md5_crypt.py  osint.py  osint.py.save  scanner.py  subdomain.py  web_head.py  whois.py  wordlist.py
script/crawler/: cve_engine.go
script/integrity/: Cargo.toml
scripts/: README.md
scripts/cpl/: advcore.py  compiler.py  ioname.py
scripts/security/: generate_sign.py  sign.py
tests/: test_manifest_sign.py  test_modules.py  test_pr.py  test_verify_integrity.py
tests/database/: signed_manifest.json
(+44 files in other folders)
