[package]
name = "storm-engine"
version = "0.1.0"
edition = "2026"

[[bin]]
name = "check"
path = "check.rs"

[dependencies]
sha2 = "0.10"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.21"

