[package]
name = "storm-framework"
version = "0.1.0"
edition = "2024"

[lib]
name = "storm_manifest"
path = "dummy.rs"

[dependencies]
rand = "0.8"
regex = "1"
toml = "0.8"
serde_yaml = "0.9"

cookie = "0.18"
mime = "0.3"
mime_guess = "2"
notify = "6"
ignore = "0.4"

fs_extra = "1"
zip = "0.6"
seahash = "4"
blake3 = "1"
md-5 = "0.10"

hmac = "0.12"
aes = "0.8"
cbc = "0.1"
hex = "0.4"

sha2 = "0.10"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.21"
